# uniffi-rs

./: Cargo.toml
fixtures/foreign-async-trait/: Cargo.toml
fixtures/foreign-async-trait-external/: Cargo.toml
fixtures/foreign-async-trait-external/src/: lib.rs
fixtures/foreign-async-trait-external/tests/: test_generated_bindings.rs
fixtures/foreign-async-trait-external/tests/bindings/: test_using_external_async_trait.swift
fixtures/foreign-async-trait/src/: lib.rs
fixtures/foreign-async-trait/tests/: test_generated_bindings.rs
fixtures/foreign-async-trait/tests/bindings/: test_async_trait.swift
